src/test/ui/export.stderr
error[E0425]: cannot find function `log` in this scope
  --> $DIR/export.rs:2:26
   |
LL |     pub fn x(y: isize) { log(debug, y); }
   |                          ^^^ not found in this scope

error[E0425]: cannot find value `debug` in this scope
  --> $DIR/export.rs:2:30
   |
LL |     pub fn x(y: isize) { log(debug, y); }
   |                              ^^^^^ not found in this scope

error[E0425]: cannot find function `log` in this scope
  --> $DIR/export.rs:5:22
   |
LL |     fn z(y: isize) { log(debug, y); }
   |                      ^^^ not found in this scope

error[E0425]: cannot find value `debug` in this scope
  --> $DIR/export.rs:5:26
   |
LL |     fn z(y: isize) { log(debug, y); }
   |                          ^^^^^ not found in this scope

error[E0603]: function `z` is private
  --> $DIR/export.rs:10:18
   |
LL | fn main() { foo::z(10); }
   |                  ^

error: aborting due to 5 previous errors

Some errors have detailed explanations: E0425, E0603.
For more information about an error, try `rustc --explain E0425`.
